# swagger.json
@@ -77,8 +77,8 @@
           }
         ],
         "responses": {
-          "405": {
-            "description": "Invalid input"
+          "201": {
+            "description": "Created"
           }
         }
       },
@@ -224,6 +224,157 @@
                 "$ref": "#/definitions/Direction"
               }
             }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "direction resource"
+        ],
+        "summary": "Add a new Recipe Direction",
+        "description": "",
+        "operationId": "addRecipeDirection",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Recipe Direction object to be added to the system",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Direction"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "direction resource"
+        ],
+        "summary": "Deletes all Recipe Directions",
+        "description": "",
+        "operationId": "deleteAllRecipeDirections",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          }
+        }
+      }
+    },
+    "/directions/{directionId}": {
+      "get": {
+        "tags": [
+          "direction resource"
+        ],
+        "summary": "Find Recipe Direction by ID",
+        "description": "Returns a single Recipe Direction",
+        "operationId": "getRecipeDirectionById",
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "directionId",
+            "in": "path",
+            "description": "ID of Recipe Direction to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Direction"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "direction resource"
+        ],
+        "summary": "Update an existing Recipe Direction",
+        "description": "",
+        "operationId": "updateRecipeDirectionById",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "directionId",
+            "in": "path",
+            "description": "ID of Recipe Direction to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "405": {
+            "description": "Validation Exception"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "direction resource"
+        ],
+        "summary": "Deletes a Recipe Direction by ID",
+        "description": "",
+        "operationId": "deleteRecipeDirection",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "directionId",
+            "in": "path",
+            "description": "ID of Recipe Direction to return",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Invalid ID Supplied"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
